deployment/cloud/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rides-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
    - hosts:
        - $CLOUD_DOMAIN
      secretName: tls-secret
  ingressClassName: nginx
  rules:
    - host: $CLOUD_DOMAIN
      http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend
                port:
                  number: 8080
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
